force-app/main/default/objects/Knowledge_DataCategorySelection_Home__dll/fields/DataCategoryGroupId__c.field-meta.xml
<CustomField>
    <fullName>DataCategoryGroupId__c</fullName>
    <label>DataCategoryGroupId</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>DataCategoryGroupId</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>